--- a/data/demo.ipynb
+++ b/data/demo.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## <a id='toc1_1_'></a>[Occlude images](#toc0_)\n",
     "\n",
-    "This notebook illustrates how to use the functions contained in this repository. "
+    "This notebook illustrates how to use the functions contained in this repository. To run this notebook, clone the repository and place the notebook in the root folder, or install the repo using git (see Installation on the README file)."
    ]
   },
   {
